--- a/public/labs/a3/css/index.html
+++ b/public/labs/a3/css/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<a href="../../index.html">Back</a>
+<a href="../../../index.html">Back</a>
 
 <h1>Cascading Style Sheet (CSS)</h1>
 <h2>Style attribute and tag</h2>
@@ -160,7 +160,7 @@
 </div>
 
 <h3>Absolute position</h3>
-<div class="pos-relative">
+<div class="pos-relative min-height-150">
     <div class="pos-absolute-10-10 bg-color-yellow dimension-portrait">
         Portrait
     </div>
@@ -180,7 +180,7 @@ Its position is "Fixed".</p>
 
 
 <h2>Z index</h2>
-<div class="pos-relative">
+<div class="pos-relative min-height-150">
     <div class="pos-absolute-10-10 bg-color-yellow dimension-portrait">Portrait</div>
     <div class="zindex-bring-to-front pos-absolute-50-50 bg-color-blue fg-color-white dimension-landscape">Landscape</div>
     <div class="pos-absolute-120-20 bg-color-red dimension-square">
