--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -6,22 +6,19 @@
     <link href="css/index.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="navigation">
+<div class="wd-navigation">
     <form>
-        <div class="wd-search">
-            <div class="wd-search-content">
-                <input class="wd-search-field rounded-edges wd-font" placeholder="Search Tuiter"/>
-                <div class="float-right">
-                    <a href="explore-settings.html">
-                        <img class="wd-tuit-emoji wd-gear-emoji" src="images/gear_setting_image.png">
-                    </a>
-                </div>
-<!--                <a href="explore-settings.html" class="wd-gear-icon"><span>&#9881;</span></a>-->
+        <div class="wd-search-content">
+            <input class="wd-search-field wd-rounded-edges wd-font" placeholder="Search Tuiter"/>
+            <div class="wd-float-right">
+                <a class="wd-anchor-underline" href="explore-settings.html">
+                    <span class="wd-gear-emoji">&#9881;</span>
+                </a>
             </div>
         </div>
     </form>
 
-    <div class="flex-container">
+    <div class="wd-flex-container">
         <div class="wd-nav-box">
             <a href="#" class="wd-nav-section wd-first-nav wd-font">
                 <div>
@@ -67,70 +64,90 @@
         </div>
     </div>
 </div>
-<svg class="wd-shaded-section-break">
-    <rect class="wd-shaded-section-break" width="100%"
-          style="fill:rgb(110, 118, 125);" />
-</svg>
 <div class="wd-box">
+    <svg class="wd-shaded-section-break">
+        <rect class="wd-shaded-section-break" width="100%"
+              style="fill:rgb(110, 118, 125);" />
+    </svg>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
-            <div>Trending in Gaming</div>
+        <div>
+            <span>Trending in Gaming</span>
+            <div class="wd-float-right">
+                <svg width="24px" height="24px">
+                    <g>
+                        <circle r="2" cx="5" cy="12" fill="white"></circle>
+                        <circle r="2" cx="12" cy="12" fill="white"></circle>
+                        <circle r="2" cx="19" cy="12" fill="white"></circle>
+                    </g>
+                </svg>
+            </div>
             <div class="wd-tuit-title">Wordle 234 X</div>
             <div>People try to guess today's five-letter word in six tries or fewer in brainteaser Wordle</div>
             <div>5,620 Tuits</div>
         </div>
     </div>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
-            <div>Sports · Trending</div>
-            <span class="wd-tuit-title">#OlympicGames</span>
-            <img class="wd-tuit-emoji" src="https://abs.twimg.com/hashflags/Beijing_Winter_Olympics_2022/Beijing_Winter_Olympics_2022.png">
+        <div>
+            <span>Sports · Trending</span>
+            <div class="wd-float-right">
+                <svg width="24px" height="24px">
+                    <g>
+                        <circle r="2" cx="5" cy="12" fill="white"></circle>
+                        <circle r="2" cx="12" cy="12" fill="white"></circle>
+                        <circle r="2" cx="19" cy="12" fill="white"></circle>
+                    </g>
+                </svg>
+            </div>
+            <div>
+                <span class="wd-tuit-title">#OlympicGames</span>
+                <img class="wd-tuit-emoji" src="https://abs.twimg.com/hashflags/Beijing_Winter_Olympics_2022/Beijing_Winter_Olympics_2022.png">
+            </div>
             <div>512k Tuits</div>
         </div>
     </div>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
+        <div class="wd-float-left">
             <div>COVID-19 · LIVE</div>
             <div class="wd-tuit-title">COVID-19: News and updates for Massachusetts</div>
         </div>
-        <div class="float-right">
+        <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/semantic_core_img/1338528565155938305/cRNgnRYl?format=jpg&name=240x240);"></div>
         </div>
     </div>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
+        <div class="wd-float-left">
             <div>Beijing 2022 · LIVE</div>
             <span class="wd-tuit-title">Beijing 2022: The United States at the Olympic Winter Games</span>
             <img class="wd-tuit-emoji" src="images/american_flag.svg">
         </div>
-        <div class="float-right">
+        <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/semantic_core_img/1487943705319276544/2bbmBkNy?format=png&name=240x240);"></div>
         </div>
     </div>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
+        <div class="wd-float-left">
             <img class="wd-tuit-emoji-round" src="images/bloomberg_wealth.png">
             <span class="wd-tuit-title">Bloomberg Wealth</span>
             <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
             <span> · Yesterday</span>
             <div class="wd-tuit-title">Most Americans think there's never been a worse time to buy a house</div>
         </div>
-        <div class="float-right">
+        <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/media/FLBE9ZFXwAM1IFA?format=jpg&name=240x240);"></div>
         </div>
     </div>
     <div class="wd-tuit-style wd-font wd-border-bottom">
-        <div class="float-left">
+        <div class="wd-float-left">
             <img class="wd-tuit-emoji-round" src="images/cnbc_image.png">
             <span class="wd-tuit-title">CNBC</span>
             <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
             <span> · Yesterday</span>
             <div class="wd-tuit-title">Frontier and Spirit to merge creating 5th largest airline in U.S.</div>
         </div>
-        <div class="float-right">
+        <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/media/FK_i3Q-XIAsLij1?format=jpg&name=240x240);"></div>
         </div>
