a3 ExplorePage css sp22

--- a/public/tuiter/bookmarks.html
+++ b/public/tuiter/bookmarks.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Bookmarks</title>
-</head>
-<body>
-<a href="navigation.html">Back</a>
+    <link href="css/index.css" rel="stylesheet"/>
 
+</head>
+<body class="wd-margin-left-16">
+<div class="wd-border-style wd-overflow-hidden wd-font wd-margin-top-12 wd-padding-bottom-12 wd-font-13">
+    <div class="wd-margin-left-16 wd-margin-top-12">
+        <span class="wd-font-color-white wd-font-weight wd-font-20">Bookmarks</span>
+        <div class="wd-float-right wd-padding-right-12">
+            <a href="#">
+                <svg width="24px" height="24px">
+                    <g>
+                        <circle r="2" cx="5" cy="12" fill="rgb(29, 161, 242)"></circle>
+                        <circle r="2" cx="12" cy="12" fill="rgb(29, 161, 242)"></circle>
+                        <circle r="2" cx="19" cy="12" fill="rgb(29, 161, 242)"></circle>
+                    </g>
+                </svg>
+            </a>
+        </div>
+        <div>
+            <span class="wd-font-color-gray wd-font-13">@WebDev</span>
+        </div>
+    </div>
+</div>
+
+<div class="wd-flex-container-avatar wd-overflow-hidden wd-border-style wd-font wd-font-13">
+    <div class="wd-margin-left-16 wd-margin-top-12">
+        <img class="wd-avatar-image-round" src="images/associated_press_image.png">
+    </div>
+    <div class="wd-float-right wd-margin-top-12 wd-margin-left-12 wd-font-15 wd-font-color-gray">
+        <span class="wd-font-color-white">The Associated Press</span>
+        <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
+        <span>@AP · 3h</span>
+        <div class="wd-font-color-white wd-max-width-506 wd-margin-right-16">Nathan Chen is on the precipice of joining one of the most exclusive clubs in American figure skating: Olympic champions.</div></br>
+        <div class="wd-font-color-white wd-max-width-506 wd-margin-right-16">After a record-setting short program at the Beijing Games, Chen needs only to perform a clean free skate to earn the gold medal.</div>
+        <div class="wd-margin-top-12 wd-overflow-hidden  wd-border-round">
+            <div>
+                <div class="wd-article-image"
+                     style="background-image: url(images/nathan_chen.jpg);"></div>
+            </div>
+            <div class="wd-border-style wd-article-text">
+                <div class="wd-padding-all-12">
+                    <div>apnews.com</div>
+                    <div class="wd-font-color-white">Nathan Chen on brink of elite club of US Olympic champions</div>
+                    <div>With one clean performance in Thursday's free skate, Nathan Chen will finish a four-year journey of redemption by winning his elusive ...</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
