--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -5,10 +5,10 @@
     <title>Explore</title>
     <link href="css/index.css" rel="stylesheet"/>
 </head>
-<body>
-<div class="wd-navigation">
+<body class="wd-margin-left-16">
+<div class="wd-overflow-hidden wd-border-style">
     <form>
-        <div class="wd-search-content">
+        <div class="wd-margin-top-10 wd-overflow-hidden">
             <input class="wd-search-field wd-rounded-edges wd-font" placeholder="Search Tuiter"/>
             <div class="wd-float-right">
                 <a class="wd-anchor-underline" href="explore-settings.html">
@@ -20,7 +20,7 @@
 
     <div class="wd-flex-container">
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-first-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-blue wd-font">
                 <div>
                     <span>For you</span>
                 </div>
@@ -28,35 +28,35 @@
             <div class="wd-nav-section-underline"></div>
         </div>
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-shaded-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-gray wd-font">
                 <div>
                     <span>Trending</span>
                 </div>
             </a>
         </div>
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-shaded-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-gray wd-font">
                 <div>
                     <span>COVID-19</span>
                 </div>
             </a>
         </div>
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-shaded-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-gray wd-font">
                 <div>
                     <span>News</span>
                 </div>
             </a>
         </div>
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-shaded-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-gray wd-font">
                 <div>
                     <span>Sports</span>
                 </div>
             </a>
         </div>
         <div class="wd-nav-box">
-            <a href="#" class="wd-nav-section wd-shaded-nav wd-font">
+            <a href="#" class="wd-nav-tabs-no-underline wd-font-15 wd-font-color-gray wd-font">
                 <div>
                     <span>Entertainment</span>
                 </div>
@@ -64,12 +64,12 @@
         </div>
     </div>
 </div>
-<div class="wd-box">
+<div class="wd-border-style">
     <svg class="wd-shaded-section-break">
         <rect class="wd-shaded-section-break" width="100%"
               style="fill:rgb(110, 118, 125);" />
     </svg>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div>
             <span>Trending in Gaming</span>
             <div class="wd-float-right">
@@ -81,12 +81,12 @@
                     </g>
                 </svg>
             </div>
-            <div class="wd-tuit-title">Wordle 234 X</div>
+            <div class="wd-font-weight wd-font-color-white">Wordle 234 X</div>
             <div>People try to guess today's five-letter word in six tries or fewer in brainteaser Wordle</div>
             <div>5,620 Tuits</div>
         </div>
     </div>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div>
             <span>Sports · Trending</span>
             <div class="wd-float-right">
@@ -99,26 +99,26 @@
                 </svg>
             </div>
             <div>
-                <span class="wd-tuit-title">#OlympicGames</span>
+                <span class="wd-font-weight wd-font-color-white">#OlympicGames</span>
                 <img class="wd-tuit-emoji" src="https://abs.twimg.com/hashflags/Beijing_Winter_Olympics_2022/Beijing_Winter_Olympics_2022.png">
             </div>
             <div>512k Tuits</div>
         </div>
     </div>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div class="wd-float-left">
             <div>COVID-19 · LIVE</div>
-            <div class="wd-tuit-title">COVID-19: News and updates for Massachusetts</div>
+            <div class="wd-font-weight wd-font-color-white">COVID-19: News and updates for Massachusetts</div>
         </div>
         <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/semantic_core_img/1338528565155938305/cRNgnRYl?format=jpg&name=240x240);"></div>
         </div>
     </div>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div class="wd-float-left">
             <div>Beijing 2022 · LIVE</div>
-            <span class="wd-tuit-title">Beijing 2022: The United States at the Olympic Winter Games</span>
+            <span class="wd-font-weight wd-font-color-white">Beijing 2022: The United States at the Olympic Winter Games</span>
             <img class="wd-tuit-emoji" src="images/american_flag.svg">
         </div>
         <div class="wd-float-right">
@@ -126,26 +126,26 @@
                  style="background-image: url(https://pbs.twimg.com/semantic_core_img/1487943705319276544/2bbmBkNy?format=png&name=240x240);"></div>
         </div>
     </div>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div class="wd-float-left">
             <img class="wd-tuit-emoji-round" src="images/bloomberg_wealth.png">
-            <span class="wd-tuit-title">Bloomberg Wealth</span>
+            <span class="wd-font-weight wd-font-color-white">Bloomberg Wealth</span>
             <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
             <span> · Yesterday</span>
-            <div class="wd-tuit-title">Most Americans think there's never been a worse time to buy a house</div>
+            <div class="wd-font-weight wd-font-color-white">Most Americans think there's never been a worse time to buy a house</div>
         </div>
         <div class="wd-float-right">
             <div class="wd-tuit-image"
                  style="background-image: url(https://pbs.twimg.com/media/FLBE9ZFXwAM1IFA?format=jpg&name=240x240);"></div>
         </div>
     </div>
-    <div class="wd-tuit-style wd-font wd-border-bottom">
+    <div class="wd-tuit-style wd-font wd-border-bottom wd-font-13">
         <div class="wd-float-left">
             <img class="wd-tuit-emoji-round" src="images/cnbc_image.png">
-            <span class="wd-tuit-title">CNBC</span>
+            <span class="wd-font-weight wd-font-color-white">CNBC</span>
             <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
             <span> · Yesterday</span>
-            <div class="wd-tuit-title">Frontier and Spirit to merge creating 5th largest airline in U.S.</div>
+            <div class="wd-font-weight wd-font-color-white">Frontier and Spirit to merge creating 5th largest airline in U.S.</div>
         </div>
         <div class="wd-float-right">
             <div class="wd-tuit-image"
