a3 BookmarksPage and ExplorePage css sp22

--- a/public/tuiter/bookmarks.html
+++ b/public/tuiter/bookmarks.html
@@ -31,23 +31,159 @@
     <div class="wd-margin-left-16 wd-margin-top-12">
         <img class="wd-avatar-image-round" src="images/associated_press_image.png">
     </div>
-    <div class="wd-float-right wd-margin-top-12 wd-margin-left-12 wd-font-15 wd-font-color-gray">
+    <div class="wd-float-right wd-margin-top-12 wd-margin-left-12 wd-font-15 wd-font-color-gray wd-margin-right-16">
         <span class="wd-font-color-white">The Associated Press</span>
         <img class="wd-tuit-emoji" src="images/Twitter_Verified_Badge.svg.png">
-        <span>@AP · 3h</span>
-        <div class="wd-font-color-white wd-max-width-506 wd-margin-right-16">Nathan Chen is on the precipice of joining one of the most exclusive clubs in American figure skating: Olympic champions.</div></br>
-        <div class="wd-font-color-white wd-max-width-506 wd-margin-right-16">After a record-setting short program at the Beijing Games, Chen needs only to perform a clean free skate to earn the gold medal.</div>
-        <div class="wd-margin-top-12 wd-overflow-hidden  wd-border-round">
+        <span>@AP · 5h</span>
+        <div class="wd-font-color-white wd-max-width-506">Nathan Chen is on the precipice of joining one of the most exclusive clubs in American figure skating: Olympic champions.</div></br>
+        <div class="wd-font-color-white wd-max-width-506">After a record-setting short program at the Beijing Games, Chen needs only to perform a clean free skate to earn the gold medal.</div>
+        <div class="wd-margin-top-12 wd-overflow-hidden wd-border-round wd-width-504">
+            <div class="wd-article-image wd-border-style"
+                 style="background-image: url(images/nathan_chen.jpg);"></div>
             <div>
-                <div class="wd-article-image"
-                     style="background-image: url(images/nathan_chen.jpg);"></div>
-            </div>
-            <div class="wd-border-style wd-article-text">
                 <div class="wd-padding-all-12">
                     <div>apnews.com</div>
                     <div class="wd-font-color-white">Nathan Chen on brink of elite club of US Olympic champions</div>
                     <div>With one clean performance in Thursday's free skate, Nathan Chen will finish a four-year journey of redemption by winning his elusive ...</div>
                 </div>
+            </div>
+        </div>
+        <div class="wd-flex-container-article-response wd-max-width-450 wd-margin-top-12 wd-padding-bottom-12">
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Reply.png">
+                        <span class="wd-font-13">7</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div class="wd-retuit-icon-hover">
+                        <img class="wd-article-response-icons" src="images/Twitter_Retweet.png">
+                        <span class="wd-font-13">23</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Heart_colored.png">
+                        <span class="wd-font-color-pink wd-font-13">127</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-share-icon" src="images/Twitter_Share.png">
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="wd-flex-container-avatar wd-overflow-hidden wd-border-style wd-font wd-font-13">
+    <div class="wd-margin-left-16 wd-margin-top-12">
+        <img class="wd-avatar-image-round" src="images/nfl_memes_image.jpg">
+    </div>
+    <div class="wd-float-right wd-margin-top-12 wd-margin-left-12 wd-font-15 wd-font-color-gray wd-margin-right-16">
+        <span class="wd-font-color-white">NFL Memes</span>
+        <span>@NFL_Memes · 14h</span>
+        <div class="wd-font-color-white wd-max-width-506">The average single ticket price for Super Bowl LVI costs nearly $9,000 with a full 24-person suite costing nearly $1 million.</div></br>
+        <div class="wd-font-color-white wd-max-width-506">Sheesh.</div>
+        <div class="wd-margin-top-12 wd-overflow-hidden wd-border-round wd-width-504">
+            <div class="wd-article-image wd-border-style"
+                 style="background-image: url(images/superbowl_image.jpg);"></div>
+            <div>
+                <div class="wd-padding-all-12">
+                    <div>dailysnark.com</div>
+                    <div class="wd-font-color-white">The Average Single Ticket Price for Super Bowl LVI Costs Nearly $9,0...</div>
+                    <div>If you're a fan who's planning on attending Super Bowl LVI, you better be ready to cough up some serious dough. According to StubHub, via ...</div>
+                </div>
+            </div>
+        </div>
+        <div class="wd-flex-container-article-response wd-max-width-450 wd-margin-top-12 wd-padding-bottom-12">
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Reply.png">
+                        <span class="wd-font-13">53</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div class="wd-retuit-icon-hover">
+                        <img class="wd-article-response-icons" src="images/Twitter_Retweet.png">
+                        <span class="wd-font-13">71</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Heart_colored.png">
+                        <span class="wd-font-color-pink wd-font-13">570</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-share-icon" src="images/Twitter_Share.png">
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="wd-flex-container-avatar wd-overflow-hidden wd-border-style wd-font wd-font-13">
+    <div class="wd-margin-left-16 wd-margin-top-12">
+        <img class="wd-avatar-image-round" src="images/anime_image.jpg">
+    </div>
+    <div class="wd-float-right wd-margin-top-12 wd-margin-left-12 wd-font-15 wd-font-color-gray wd-margin-right-16">
+        <span class="wd-font-color-white">Anime</span>
+        <span>@shonenvibing · 14h</span>
+        <div class="wd-font-color-white wd-max-width-506">Anime: Demon Slayer</div></br>
+        <div class="wd-margin-top-12 wd-overflow-hidden wd-border-round wd-width-504">
+            <div class="wd-article-image-only"
+                 style="background-image: url(images/demon_slayer.jpg);"></div>
+        </div>
+        <div class="wd-flex-container-article-response wd-margin-top-12 wd-padding-bottom-12 wd-max-width-450">
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Reply.png">
+                        <span class="wd-font-13">90</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div class="wd-retuit-icon-hover">
+                        <img class="wd-article-response-icons" src="images/Twitter_Retweet.png">
+                        <span class="wd-font-13">6.9K</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-icons" src="images/Twitter_Heart_colored.png">
+                        <span class="wd-font-color-pink wd-font-13">45.8K</span>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="wd-nav-tabs-no-underline wd-font-color-gray">
+                    <div>
+                        <img class="wd-article-response-share-icon" src="images/Twitter_Share.png">
+                    </div>
+                </a>
             </div>
         </div>
     </div>
