--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -75,9 +75,9 @@
             <div class="wd-float-right">
                 <svg width="24px" height="24px">
                     <g>
-                        <circle r="2" cx="5" cy="12" fill="white"></circle>
-                        <circle r="2" cx="12" cy="12" fill="white"></circle>
-                        <circle r="2" cx="19" cy="12" fill="white"></circle>
+                        <circle r="2" cx="5" cy="12" fill="rgb(110, 118, 125)"></circle>
+                        <circle r="2" cx="12" cy="12" fill="rgb(110, 118, 125)"></circle>
+                        <circle r="2" cx="19" cy="12" fill="rgb(110, 118, 125)"></circle>
                     </g>
                 </svg>
             </div>
@@ -92,9 +92,9 @@
             <div class="wd-float-right">
                 <svg width="24px" height="24px">
                     <g>
-                        <circle r="2" cx="5" cy="12" fill="white"></circle>
-                        <circle r="2" cx="12" cy="12" fill="white"></circle>
-                        <circle r="2" cx="19" cy="12" fill="white"></circle>
+                        <circle r="2" cx="5" cy="12" fill="rgb(110, 118, 125)"></circle>
+                        <circle r="2" cx="12" cy="12" fill="rgb(110, 118, 125)"></circle>
+                        <circle r="2" cx="19" cy="12" fill="rgb(110, 118, 125)"></circle>
                     </g>
                 </svg>
             </div>
