--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -10,7 +10,7 @@
     <form>
         <div class="wd-margin-top-10 wd-overflow-hidden">
             <input class="wd-search-field wd-rounded-edges wd-font" placeholder="Search Tuiter"/>
-            <div class="wd-float-right">
+            <div class="wd-float-right wd-gear-emoji">
                 <a class="wd-anchor-underline" href="explore-settings.html">
                     <span class="wd-gear-emoji">&#9881;</span>
                 </a>
