--- a/public/tuiter/bookmarks.html
+++ b/public/tuiter/bookmarks.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bookmarks</title>
     <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/bookmarks.css" rel="stylesheet"/>
+
 
 </head>
 <body class="wd-margin-left-16">
