--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Explore</title>
     <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/explore.css" rel="stylesheet"/>
 </head>
 <body class="wd-margin-left-16">
 <div class="wd-overflow-hidden wd-border-style">
