--- a/public/labs/a4/bootstrap/index.html
+++ b/public/labs/a4/bootstrap/index.html
@@ -6,6 +6,7 @@
     <link href="/public/vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="index.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
+    <link href="../../a3/css/index.css" rel="stylesheet"/>
 
 
 </head>
